Issue #SB-18775 UI - rtl alignment issues toc, profile, search list view more page (refer the attachments)

--- a/src/client/src/app/modules/user-profile/components/profile-page/profile-page.component.scss
+++ b/src/client/src/app/modules/user-profile/components/profile-page/profile-page.component.scss
@@ -21,6 +21,7 @@
         position: absolute;
         margin-top: 0;
         right: 12%;
+        left: auto;
         bottom: calculateRem(8px);
         html[dir="rtl"] & {
           left: 12%;
